--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
-#spring.datasource.url= jdbc:mysql://localhost:3306/veiculosdb
-#spring.datasource.username=root
-#spring.datasource.password=12345
-#spring.jpa.hibernate.ddl-auto=create
+# CONFIGURAÇÕES PARA USO DO MYSQL
+spring.datasource.url= jdbc:mysql://localhost:3306/veiculosdb
+spring.datasource.username=root
+spring.datasource.password=aluno
+spring.jpa.hibernate.ddl-auto=create
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+server.servlet-path=/apiveiculos
+
+# CONFIGURAÇÕES PARA USO DO H2
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/veiculosdb;DB_CLOSE_ON_EXIT=FALSE";
-spring.datasource.username=a
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:file:~/veiculosdb;DB_CLOSE_ON_EXIT=FALSE";
+#spring.datasource.username=a
+#spring.datasource.password=
