--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.datasource.url= jdbc:mysql://localhost:3306/veiculosdb
 spring.datasource.username=root
 spring.datasource.password=aluno
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 
-server.servlet-path=/apiveiculos
+server.servlet.context-path=/apiveiculos
 
 # CONFIGURAÇÕES PARA USO DO H2
 #spring.h2.console.enabled=true
