--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # CONFIGURAÇÕES PARA USO DO MYSQL
-spring.datasource.url= jdbc:mysql://localhost:3306/veiculosdb
+spring.datasource.url= jdbc:mysql://localhost:3306/veiculosdb?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=aluno
 spring.jpa.hibernate.ddl-auto=create
